--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.example.android.miwok"
+        applicationId "com.suhail.android.miwok"
         minSdkVersion 10
         targetSdkVersion 23
         versionCode 1
